@@ -1,7 +1,7 @@
 ---
 abstract: 'Vivify a Git::Wrapper instance for Dist::Zilla'
 author:
-  - 'Kent Fredric <kentfredric@gmail.com>'
+  - 'Kent Fredric <kentnl@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
