@@ -38,7 +38,7 @@ ATTRIBUTES
     Vivified if not specified based on the "zilla" parameter.
 
 AUTHOR
-    Kent Fredric <kentfredric@gmail.com>
+    Kent Fredric <kentnl@cpan.org>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2014 by Kent Fredric
