@@ -1,7 +1,7 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
 name = Dist-Zilla-Util-Git-Wrapper
-author = Kent Fredric <kentfredric@gmail.com>
+author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
