@@ -1,6 +1,6 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.007000 at Sat Dec  7 06:18:54 2013
 name             = Dist-Zilla-Util-Git-Wrapper
-author           = Kent Fredric <kentfredric@gmail.com>
+author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
