@@ -7,6 +7,9 @@ Release history for Dist-Zilla-Util-Git-Wrapper
  - develop: +5 ↑1 -1 (recommends: +1, suggests: ↑2)
  - test: (recommends: ↑2)
 
+ [Metadata]
+ - Author = kentnl
+
 0.004000 2014-08-27T14:16:46Z
  [00 Major]
  - Changes that may affect hand-operated downstreams
